--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         <a href="https://beamish-tartufo-08f3ae.netlify.app/">React Task 1</a>
         <a href="https://glittery-kashata-1c418f.netlify.app/">React Task 2</a>
         <a href="https://dulcet-mandazi-cba773.netlify.app/">React Task 3</a>
-        <a href="task4.html">React Task 4</a>
+        <a href="https://voluble-twilight-ee213e.netlify.app/">React Task 4</a>
         <a href="https://candid-duckanoo-824b09.netlify.app/">React Task 5</a>
         <a href="task5.html">React Task 6</a>
 
